# filePasser

Lab2Passoff/: AddAuto.cpp  AddAuto.h  Automaton.h  BlockCommentAuto.cpp  BlockCommentAuto.h  CMakeLists.txt  Comma.cpp  Comma.h  CommentAuto.cpp  CommentAuto.h  DataLogProgram.cpp  DataLogProgram.h  EndOfFileAuto.cpp  EndOfFileAuto.h  FactsAuto.cpp  FactsAuto.h  IdAuto.cpp  IdAuto.h  LeftParenAuto.cpp  LeftParenAuto.h  Lexer.cpp  Lexer.h  MultiplyAuto.cpp  MultiplyAuto.h  Parameter.cpp  Parameter.h  ParserTest.cpp  ParserTest.h  Period.cpp  Period.h  Predicate.cpp  Predicate.h  QueriesAuto.cpp  QueriesAuto.h  QuestionAuto.cpp  QuestionAuto.h  RightParenAuto.cpp  RightParenAuto.h  Rule.cpp  Rule.h  (+12 more)
